# Magic-fight-Server

./: .gitignore  CMakeLists.txt  EventQueue.cpp  EventQueue.h  Magic_fight.files  Magic_fight.layout  README.md  actions.cpp  actions.h  board.cpp  board.h  client  klibriry.h  main.cpp  object.cpp  object.h  projectiles.cpp
UML/: uml.xmi
_build/: CMakeCache.txt  Makefile  cmake_install.cmake  serv
_build/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
db/: db.json
images/: board.blend
include/: EventQueue.h  NetCommon.cpp  NetCommon.hpp  NetConnection.hpp  NetDatabase.hpp  NetModule.hpp  NetThreadSafeQueue.hpp  Server.hpp  action_classes.h  actions.h  board.h  klibriry.h  object.h  projectiles.h
main/: main.cpp
sources/: EventQueue.cpp  NetModule.cpp  Server.cpp  action_classes.cpp  actions.cpp  board.cpp  object.cpp  projectiles.cpp
tests/: test.cpp
